# maybe-it-useful

./: LICENCE  setup.cfg
pysearcherror.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: console_video_player.py  lazy_google_error.py
